--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_linear_layout">LinearLayoutActivity</string>
     <string name="title_activity_table_layout">TableLayoutActivity</string>
     <string name="title_activity_scroll_view">ScrollViewActivity</string>
+    <string name="title_activity_constraint_layout">ConstraintLayoutActivity</string>
 </resources>
