--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_table_layout">TableLayoutActivity</string>
     <string name="title_activity_scroll_view">ScrollViewActivity</string>
     <string name="title_activity_constraint_layout">ConstraintLayoutActivity</string>
+    <string name="title_activity_taska05_12_2018">taska05_12_2018</string>
 </resources>
